tests/errors/E007.zen
int main() {
    return nowhere_to_be_found;     /// Error 007: Variable 'nowhere_to_be_found' is not defined
}